[gd_scene load_steps=14 format=3 uid="uid://bth6nkx5rjn86"]

[ext_resource type="Script" path="res://menus/LoadingScreen.gd" id="1"]
[ext_resource type="FontFile" path="res://fonts/new_fonts/Comforta.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://cwn3cpsxb1ntk" path="res://graphics/no_preview_texture.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dyst4sw87pyjr" path="res://graphics/loadingu_bg.png" id="4"]
[ext_resource type="FontFile" path="res://fonts/new_fonts/roboto_regular_25.tres" id="5"]
[ext_resource type="FontFile" uid="uid://dfpyn56qxyrpb" path="res://fonts/Default_Font.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://vhdytfcvo7jj" path="res://graphics/Warning sign.svg" id="7"]
[ext_resource type="PackedScene" path="res://menus/PreGameChartFeaturesDisplay.tscn" id="8"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0745098, 0.0392157, 0.14902, 0.501961)

[sub_resource type="Gradient" id="29"]
offsets = PackedFloat32Array(0.3, 1)
colors = PackedColorArray(0.07, 0.04, 0.15, 0.75, 0.07, 0.04, 0.15, 0)

[sub_resource type="GradientTexture2D" id="30"]
gradient = SubResource("29")

[sub_resource type="StyleBoxTexture" id="31"]
texture = SubResource("30")
region_rect = Rect2(0, 0, 2048, 1)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 7

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("1")

[node name="LoadingScreenElements" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="PanelContainer" parent="LoadingScreenElements"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 0
anchor_top = 0.674
anchor_right = 1.0
anchor_bottom = 0.674
offset_top = 0.0799561
offset_bottom = 202.08
theme_override_styles/panel = SubResource("31")

[node name="Panel" type="TextureRect" parent="LoadingScreenElements/Panel2"]
self_modulate = Color(0.592157, 0.239216, 0.94902, 0.501961)
show_behind_parent = true
layout_mode = 2
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 2

[node name="Panel3" type="PanelContainer" parent="LoadingScreenElements/Panel2"]
custom_minimum_size = Vector2(0, 202)
layout_mode = 2
theme_override_styles/panel = SubResource("6")

[node name="MarginContainer" type="MarginContainer" parent="LoadingScreenElements/Panel2/Panel3"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 21

[node name="TextureRect" type="TextureRect" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("5")
text = "Title"

[node name="HSeparator" type="HSeparator" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MetaLabel" type="Label" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = ExtResource("5")
text = "1
2"
vertical_alignment = 2

[node name="Control" type="Control" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="LoadinguLabel" type="Label" parent="LoadingScreenElements/Panel2/Panel3/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
text = "Loadingu..."
horizontal_alignment = 2
vertical_alignment = 2

[node name="EpilepsyWarning" type="Panel" parent="LoadingScreenElements"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 0
anchor_top = 0.26
anchor_right = 1.0
anchor_bottom = 0.441
pivot_offset = Vector2(0, 102)
theme_override_styles/panel = SubResource("31")

[node name="Panel2" type="TextureRect" parent="LoadingScreenElements/EpilepsyWarning"]
self_modulate = Color(0.592157, 0.239216, 0.94902, 0.501961)
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 2

[node name="Panel3" type="Panel" parent="LoadingScreenElements/EpilepsyWarning"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("6")

[node name="MarginContainer" type="MarginContainer" parent="LoadingScreenElements/EpilepsyWarning/Panel3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="LoadingScreenElements/EpilepsyWarning/Panel3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="TextureRect" type="TextureRect" parent="LoadingScreenElements/EpilepsyWarning/Panel3/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(153, 0)
layout_mode = 2
texture = ExtResource("7")
expand_mode = 1
stretch_mode = 6

[node name="Label" type="Label" parent="LoadingScreenElements/EpilepsyWarning/Panel3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6")
text = "This chart's video contains scenes with rapidly flashing colours.
Please take caution if you are affected by epilepsy."
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeaturesDisplay" parent="LoadingScreenElements" instance=ExtResource("8")]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="LoadingScreenElements"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)
